--- a/customer-account.html
+++ b/customer-account.html
@@ -301,7 +301,27 @@
                                 <td class="stock text-center">
                                     <span class="in-stock">Delivered</span>
                                 </td>
-                                <td class="product-subtotal text-center"><button type="button" class="btn btn-small">View Details</button></td>
+                                <td class="product-subtotal text-center">
+                                    <button type="button" class="btn btn-small">Invoice</button>
+                                    <button type="button" class="btn btn-small" data-toggle="modal" data-target="#exampleModal">View Details</button></td>
+                                <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                    <div class="modal-dialog" role="document">
+                                        <div class="modal-content">
+                                            <div class="modal-header">
+                                                <h5 class="modal-title" id="exampleModalLabel">Order Details</h5>
+                                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                            <span aria-hidden="true">&times;</span>
+                                          </button>
+                                            </div>
+                                            <div class="modal-body">
+                                                Order Details will Show Here
+                                            </div>
+                                            <div class="modal-footer">
+                                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
                             </tr>
                         </tbody>
                     </table>
