--- a/cart.html
+++ b/cart.html
@@ -123,58 +123,11 @@
                             <!--Minicart Popup-->
                             <div id="header-cart" class="block block-cart">
                                 <ul class="mini-products-list">
-                                    <li class="item">
-                                        <a class="product-image" href="#">
-                                            <img src="assets/images/cosmetic-products/product-image4.jpg" alt="3/4 Sleeve Kimono Dress" title="" />
-                                        </a>
-                                        <div class="product-details">
-                                            <a href="#" class="remove"><i class="anm anm-times-l" aria-hidden="true"></i></a>
-
-                                            <a class="pName" href="cart.html">Sleeve Kimono Dress</a>
-                                            <div class="variant-cart">Black / XL</div>
-                                            <div class="wrapQtyBtn">
-                                                <div class="qtyField">
-                                                    <span class="label">Qty:</span>
-                                                    <a class="qtyBtn minus" href="javascript:void(0);"><i class="fa anm anm-minus-r" aria-hidden="true"></i></a>
-                                                    <input type="text" id="Quantity" name="quantity" value="1" class="product-form__input qty">
-                                                    <a class="qtyBtn plus" href="javascript:void(0);"><i class="fa anm anm-plus-r" aria-hidden="true"></i></a>
-                                                </div>
-                                            </div>
-                                            <div class="priceRow">
-                                                <div class="product-price">
-                                                    <span class="money">$59.00</span>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </li>
-                                    <li class="item">
-                                        <a class="product-image" href="#">
-                                            <img src="assets/images/cosmetic-products/product-image4.jpg" alt="Elastic Waist Dress - Black / Small" title="" />
-                                        </a>
-                                        <div class="product-details">
-                                            <a href="#" class="remove"><i class="anm anm-times-l" aria-hidden="true"></i></a>
-
-                                            <a class="pName" href="cart.html">Elastic Waist Dress</a>
-                                            <div class="variant-cart">Gray / XXL</div>
-                                            <div class="wrapQtyBtn">
-                                                <div class="qtyField">
-                                                    <span class="label">Qty:</span>
-                                                    <a class="qtyBtn minus" href="javascript:void(0);"><i class="fa anm anm-minus-r" aria-hidden="true"></i></a>
-                                                    <input type="text" id="Quantity" name="quantity" value="1" class="product-form__input qty">
-                                                    <a class="qtyBtn plus" href="javascript:void(0);"><i class="fa anm anm-plus-r" aria-hidden="true"></i></a>
-                                                </div>
-                                            </div>
-                                            <div class="priceRow">
-                                                <div class="product-price">
-                                                    <span class="money">$99.00</span>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </li>
+                                   
                                 </ul>
                                 <div class="total">
                                     <div class="total-in">
-                                        <span class="label">Cart Subtotal:</span><span class="product-price"><span class="money">$748.00</span></span>
+                                        <span class="label">Cart Subtotal:</span><span class="product-price"><span class="money" id="cartTotal">$00.00</span></span>
                                     </div>
                                     <div class="buttonSet text-center">
                                         <a href="cart.html" class="btn btn-secondary btn--small">View Cart</a>
@@ -235,89 +188,8 @@
                                         <th class="action">&nbsp;</th>
                                     </tr>
                                 </thead>
-                                <tbody>
-                                    <tr class="cart__row border-bottom line1 cart-flex border-top">
-                                        <td class="cart__image-wrapper cart-flex-item">
-                                            <a href="#"><img class="cart__image" src="assets/images/cosmetic-products/product-image1.jpg" alt="Elastic Waist Dress - Navy / Small"></a>
-                                        </td>
-                                        <td class="cart__meta small--text-left cart-flex-item">
-                                            <div class="list-view-item__title">
-                                                <a href="#">Elastic Waist Dress </a>
-                                            </div>
-
-                                            <div class="cart__meta-text">
-                                                Color: Navy<br>Size: Small<br>
-                                            </div>
-                                        </td>
-                                        <td class="cart__price-wrapper cart-flex-item">
-                                            <span class="money">$735.00</span>
-                                        </td>
-                                        <td class="cart__update-wrapper cart-flex-item text-right">
-                                            <div class="cart__qty text-center">
-                                                <div class="qtyField">
-                                                    <a class="qtyBtn minus" href="javascript:void(0);"><i class="icon icon-minus"></i></a>
-                                                    <input class="cart__qty-input qty" type="text" name="updates[]" id="qty" value="1" pattern="[0-9]*">
-                                                    <a class="qtyBtn plus" href="javascript:void(0);"><i class="icon icon-plus"></i></a>
-                                                </div>
-                                            </div>
-                                        </td>
-                                        <td class="text-right small--hide cart-price">
-                                            <div><span class="money">$735.00</span></div>
-                                        </td>
-                                        <td class="text-center small--hide"><a href="#" class="btn btn--secondary cart__remove" title="Remove tem"><i class="icon icon anm anm-times-l"></i></a></td>
-                                    </tr>
-                                    <tr class="cart__row border-bottom line1 cart-flex border-top">
-                                        <td class="cart__image-wrapper cart-flex-item">
-                                            <a href="#"><img class="cart__image" src="assets/images/cosmetic-products/product-image3.jpg" alt="3/4 Sleeve Kimono Dress"></a>
-                                        </td>
-                                        <td class="cart__meta small--text-left cart-flex-item">
-                                            <div class="list-view-item__title">
-                                                <a href="#">3/4 Sleeve Kimono Dress</a>
-                                            </div>
-                                        </td>
-                                        <td class="cart__price-wrapper cart-flex-item">
-                                            <span class="money">$735.00</span>
-                                        </td>
-                                        <td class="cart__update-wrapper cart-flex-item text-right">
-                                            <div class="cart__qty text-center">
-                                                <div class="qtyField">
-                                                    <a class="qtyBtn minus" href="javascript:void(0);"><i class="icon icon-minus"></i></a>
-                                                    <input class="cart__qty-input qty" type="text" name="updates[]" id="qty" value="1" pattern="[0-9]*">
-                                                    <a class="qtyBtn plus" href="javascript:void(0);"><i class="icon icon-plus"></i></a>
-                                                </div>
-                                            </div>
-                                        </td>
-                                        <td class="text-right small--hide cart-price">
-                                            <div><span class="money">$735.00</span></div>
-                                        </td>
-                                        <td class="text-center small--hide"><a href="#" class="btn btn--secondary cart__remove" title="Remove tem"><i class="icon icon anm anm-times-l"></i></a></td>
-                                    </tr>
-                                    <tr class="cart__row border-bottom line1 cart-flex border-top">
-                                        <td class="cart__image-wrapper cart-flex-item">
-                                            <a href="#"><img class="cart__image" src="assets/images/cosmetic-products/product-image6.jpg" alt="Minerva Dress black"></a>
-                                        </td>
-                                        <td class="cart__meta small--text-left cart-flex-item">
-                                            <div class="list-view-item__title">
-                                                <a href="#">Minerva Dress black</a>
-                                            </div>
-                                        </td>
-                                        <td class="cart__price-wrapper cart-flex-item">
-                                            <span class="money">$526.00</span>
-                                        </td>
-                                        <td class="cart__update-wrapper cart-flex-item text-right">
-                                            <div class="cart__qty text-center">
-                                                <div class="qtyField">
-                                                    <a class="qtyBtn minus" href="javascript:void(0);"><i class="icon icon-minus"></i></a>
-                                                    <input class="cart__qty-input qty" type="text" name="updates[]" id="qty" value="1" pattern="[0-9]*">
-                                                    <a class="qtyBtn plus" href="javascript:void(0);"><i class="icon icon-plus"></i></a>
-                                                </div>
-                                            </div>
-                                        </td>
-                                        <td class="text-right small--hide cart-price">
-                                            <div><span class="money">$735.00</span></div>
-                                        </td>
-                                        <td class="text-center small--hide"><a href="#" class="btn btn--secondary cart__remove" title="Remove tem"><i class="icon icon anm anm-times-l"></i></a></td>
-                                    </tr>
+                                <tbody id="CartBody">
+                                    
                                 </tbody>
                                 <tfoot>
                                     <tr>
@@ -335,7 +207,7 @@
                         <div class="solid-border">
                             <div class="row">
                                 <span class="col-12 col-sm-6 cart__subtotal-title"><strong>Subtotal</strong></span>
-                                <span class="col-12 col-sm-6 cart__subtotal-title cart__subtotal text-right"><span class="money">$735.00</span></span>
+                                <span class="col-12 col-sm-6 cart__subtotal-title cart__subtotal text-right"><span class="money" id="Subtotal">$735.00</span></span>
                             </div>
 
                             <a style="margin-top: 20px;" href="checkout.html" class="btn btn--small-wide checkout">Go for checkout</a>
@@ -448,6 +320,7 @@
         <script src="assets/js/popper.min.js"></script>
         <script src="assets/js/lazysizes.js"></script>
         <script src="assets/js/main.js"></script>
+        <script src="assets/js/cart.js"></script>
     </div>
 </body>
 
