--- a/shop.html
+++ b/shop.html
@@ -63,6 +63,7 @@
                     <div class="col-2 col-sm-4 col-md-3 col-lg-4 text-right">
                         <span class="user-menu d-block d-lg-none"><i class="anm anm-user-al" aria-hidden="true"></i></span>
                         <ul class="customer-links list-inline">
+                            <li><a href="customer-account.html">Account</a></li>
                             <li><a href="login.html">Login</a></li>
                             <li><a href="register.html">Create Account</a></li>
                             <li><a href="wishlist.html">Wishlist</a></li>
@@ -86,9 +87,9 @@
                     <div class="col-2 col-sm-3 col-md-3 col-lg-8">
                         <div class="d-block d-lg-none">
                             <button type="button" class="btn--link site-header__menu js-mobile-nav-toggle mobile-nav--open">
-                        <i class="icon anm anm-times-l"></i>
-                        <i class="anm anm-bars-r"></i>
-                    </button>
+                                    <i class="icon anm anm-times-l"></i>
+                                    <i class="anm anm-bars-r"></i>
+                                </button>
                         </div>
                         <!--Desktop Menu-->
                         <nav class="grid__item" id="AccessibleNav">
@@ -99,7 +100,14 @@
                                 <li class="lvl1 parent megamenu"><a href="shop.html">Shop <i class="anm anm-angle-down-l"></i></a>
 
                                 </li>
-                                <li class="lvl1 parent dropdown"><a href="blog-grid-view.html">Blog <i class="anm anm-angle-down-l"></i></a>
+                                <li class="lvl1 parent dropdown"><a href="blog-grid-view.html">Blog <i class="anm anm-angle-down-l"></i></a></li>
+                                <li class="lvl1 parent dropdown"><a href="blog-grid-view.html">Categories <i class="anm anm-angle-down-l"></i></a>
+                                    <ul class="dropdown">
+                                        <li><a href="#" class="site-nav">Categories</a></li>
+                                        <li><a href="#" class="site-nav">Categories </a></li>
+                                        <li><a href="#" class="site-nav">Categories</a></li>
+                                        <li><a href="#" class="site-nav">Categories</a></li>
+                                    </ul>
                                 </li>
                                 <li class="lvl1 parent megamenu"><a href="about-us.html">About <i class="anm anm-plus-l"></i></a>
                                     <li class="lvl1 parent megamenu"><a href="contact-us.html">Contact <i class="anm anm-plus-l"></i></a></li>
@@ -122,59 +130,10 @@
                             </a>
                             <!--Minicart Popup-->
                             <div id="header-cart" class="block block-cart">
-                                <ul class="mini-products-list">
-                                    <li class="item">
-                                        <a class="product-image" href="#">
-                                            <img src="assets/images/cosmetic-products/product-image4.jpg" alt="3/4 Sleeve Kimono Dress" title="" />
-                                        </a>
-                                        <div class="product-details">
-                                            <a href="#" class="remove"><i class="anm anm-times-l" aria-hidden="true"></i></a>
-
-                                            <a class="pName" href="cart.html">Sleeve Kimono Dress</a>
-                                            <div class="variant-cart">Black / XL</div>
-                                            <div class="wrapQtyBtn">
-                                                <div class="qtyField">
-                                                    <span class="label">Qty:</span>
-                                                    <a class="qtyBtn minus" href="javascript:void(0);"><i class="fa anm anm-minus-r" aria-hidden="true"></i></a>
-                                                    <input type="text" id="Quantity" name="quantity" value="1" class="product-form__input qty">
-                                                    <a class="qtyBtn plus" href="javascript:void(0);"><i class="fa anm anm-plus-r" aria-hidden="true"></i></a>
-                                                </div>
-                                            </div>
-                                            <div class="priceRow">
-                                                <div class="product-price">
-                                                    <span class="money">$59.00</span>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </li>
-                                    <li class="item">
-                                        <a class="product-image" href="#">
-                                            <img src="assets/images/cosmetic-products/product-image4.jpg" alt="Elastic Waist Dress - Black / Small" title="" />
-                                        </a>
-                                        <div class="product-details">
-                                            <a href="#" class="remove"><i class="anm anm-times-l" aria-hidden="true"></i></a>
-
-                                            <a class="pName" href="cart.html">Elastic Waist Dress</a>
-                                            <div class="variant-cart">Gray / XXL</div>
-                                            <div class="wrapQtyBtn">
-                                                <div class="qtyField">
-                                                    <span class="label">Qty:</span>
-                                                    <a class="qtyBtn minus" href="javascript:void(0);"><i class="fa anm anm-minus-r" aria-hidden="true"></i></a>
-                                                    <input type="text" id="Quantity" name="quantity" value="1" class="product-form__input qty">
-                                                    <a class="qtyBtn plus" href="javascript:void(0);"><i class="fa anm anm-plus-r" aria-hidden="true"></i></a>
-                                                </div>
-                                            </div>
-                                            <div class="priceRow">
-                                                <div class="product-price">
-                                                    <span class="money">$99.00</span>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </li>
-                                </ul>
+                                <ul class="mini-products-list"></ul>
                                 <div class="total">
                                     <div class="total-in">
-                                        <span class="label">Cart Subtotal:</span><span class="product-price"><span class="money">$748.00</span></span>
+                                        <span class="label">Cart Subtotal:</span><span class="product-price"><span class="money" id="cartTotal">$0.00</span></span>
                                     </div>
                                     <div class="buttonSet text-center">
                                         <a href="cart.html" class="btn btn-secondary btn--small">View Cart</a>
@@ -196,16 +155,24 @@
         <div class="mobile-nav-wrapper" role="navigation">
             <div class="closemobileMenu"><i class="icon anm anm-times-l pull-right"></i> Close Menu</div>
             <ul id="MobileNav" class="mobile-nav">
-                <li class="lvl1 parent megamenu"><a href="index.html">Home <i class="anm anm-plus-l"></i></a>
+                <li class="lvl1 parent megamenu"><a href="index.html">Home </a>
                 </li>
-                <li class="lvl1 parent megamenu"><a href="shop.html">Shop <i class="anm anm-plus-l"></i></a>
+                <li class="lvl1 parent megamenu"><a href="shop.html">Shop </a>
                 </li>
 
-                <li class="lvl1 parent megamenu"><a href="blog-grid-view.html">Blog <i class="anm anm-plus-l"></i></a>
+                <li class="lvl1 parent megamenu"><a href="blog-grid-view.html">Blog </a>
                 </li>
-                <li class="lvl1 parent megamenu"><a href="about-us.html">About <i class="anm anm-plus-l"></i></a>
-                    <li class="lvl1 parent megamenu"><a href="contact-us.html">Contact <i class="anm anm-plus-l"></i></a></li>
-            </ul>
+                <li class="lvl1 parent dropdown"><a href="#">Categories <i class="anm anm-plus-l"></i></a>
+                    <ul>
+                        <li><a href="#" class="site-nav">Categories</a></li>
+                        <li><a href="#" class="site-nav">Categories </a></li>
+                        <li><a href="#" class="site-nav">Categories</a></li>
+                        <li><a href="#" class="site-nav">Categories/a></li>
+                            </ul>
+                        </li>
+                        <li class="lvl1 parent megamenu"><a href="about-us.html">About </i></a></li>
+                        <li class="lvl1 parent megamenu"><a href="contact-us.html">Contact </i></a></li>
+                    </ul>
         </div>
         <!--End Mobile Menu-->
 
@@ -772,6 +739,7 @@
         <script src="assets/js/popper.min.js"></script>
         <script src="assets/js/lazysizes.js"></script>
         <script src="assets/js/main.js"></script>
+        <script src="assets/js/cart.js"></script>
     </div>
 </body>
 
